--- a/Web/index.html
+++ b/Web/index.html
@@ -19,8 +19,8 @@
 
     <section class="banner">
       <div class="banner-content">
-        <h1>Bienvenido</h1>
-        <a href="#">Botón</a>	
+
+        <a href="evaluar.html">Evaluar mis finanzas</a>	
       </div>
     </section>
 
