--- a/Web/index.html
+++ b/Web/index.html
@@ -52,7 +52,7 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
   <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
@@ -81,8 +81,11 @@ body, html {
 
 <!-- Modal PopUp Dialog -->
 <div id='dialog'>
-  <span>Welcome</span>
-  <button id='close' onClick='closeDialog()'>Cerrar</button>
+  <label onclick='closeDialog()' class="close">&times;</label>
+  <div id="dialog-center">
+
+  <h1>hola</h1>
+</div>
 </div>
 
 <!-- About Section -->
