--- a/Web/test-2.html
+++ b/Web/test-2.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="js/script-2.js"></script>
+  <link rel="stylesheet" href="css/style-2.css">
 </head>
 <body>
-  
+  <button onclick='showDialog()'>Abrir Modal</button>
+
+  <h1>Tittle</h1>
+  <p>Hola</p>
+
+  <!-- Modal PopUp Dialog -->
+<div id='dialog'>
+ <p onclick='closeDialog()' class="closing"&times;>X</p>
+  <label onclick='closeDialog()' class="close">&times;</label>
+  <div id="dialog-center">
+
+  <h1>hola</h1>
+  hola
+  <p>Este es mi primer parrafo</p>
+</div>
+</div>
 </body>
 </html>
