--- a/Web - Copy/test-2.html
+++ b/Web - Copy/test-2.html
@@ -38,10 +38,10 @@
 
   <!-- Modal content -->
   <div class="modal-content">
-    <span onclick='closeModal()' class="close">&times;</span>
     <div class="login-box">
 
-
+    
+    <span onclick='closeModal()' class="close">&times;</span>
       <br>
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
@@ -59,7 +59,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <input onclick='showDialogDatos(); closeDialog();' class="modal-submit" type="submit" value="Continuar">
+        <input onclick='showDialogDatos(); closeDialog();' class="dialog-submit" type="submit" value="Continuar">
       </a>
     </form>
   
