--- a/Web - Copy/index.html
+++ b/Web - Copy/index.html
@@ -66,7 +66,7 @@ body, html {
     <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
     <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
-    <p><button id="openModal" onclick='openModal()' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Evaluar tus finanzas</button></p>
+    <p><button id="" onclick='showDialog()' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Evaluar tus finanzas</button></p>
   </div> 
 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
@@ -79,16 +79,10 @@ body, html {
   </div>
 </header>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span onclick='closeModal()' class="close">&times;</span>
-    <div class="login-box">
-
-
-      <br>
+<!-- Dialog Ingresos -->
+  <div id='dialog' class="login-box">
+    <div class="dialog-content">
+    <label onclick='closeDialog()' class="close">&times;</label>
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
     
@@ -105,16 +99,22 @@ body, html {
         <span></span>
         <span></span>
         <span></span>
-        <input onclick='showDialogDatos(); closeDialog();' class="modal-submit" type="submit" value="Continuar">
+        <input onclick='showDialogDatos(); closeDialog();' class="dialog-submit" type="submit" value="Continuar">
       </a>
     </form>
-  
-  </div>
-
   </div>
 
 </div>
 
+<!-- Dialog Ingresos -->
+<div id="dialog-datos" class="login-box">
+  <div class="dialog-content">
+    <label onclick='closeDialogDatos()' class="close">&times;</label>
+    <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
+    <h5>(Sólo números)</h5>
+
+  </div>
+</div> 
 
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
