--- a/Web/index.html
+++ b/Web/index.html
@@ -66,8 +66,8 @@ body, html {
     <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
     <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
-    <p><button id="openModal" onclick='openModal()' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Evaluar tus finanzas</button></p>
-    <button onclick='myFunction("modalGastos")'>Click Me!</button>
+    <p><button id="openModal" onclick='openModal("myModal")' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Evaluar tus finanzas</button></p>
+    <button onclick='openModal("modalGastos")'>Click Me!</button>
   </div> 
 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
@@ -85,7 +85,7 @@ body, html {
     
   <!-- Modal content -->
   <div class="modal-content">
-    <span onclick='closeModal()' class="close">&times;</span>
+    <span onclick='closeModal("myModal")' class="close">&times;</span>
     <div class="modal-form">
       <br>
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
@@ -103,7 +103,7 @@ body, html {
         <span></span>
         <span></span>
         <span></span>
-        <input onclick='closeModal(); myFunction("modalGastos");' class="modal-submit" type="submit" value="Continuar">
+        <input onclick='closeModal("myModal"); openModal("modalGastos");' class="modal-submit" type="submit" value="Continuar">
       </a>
     </form>
   
@@ -134,7 +134,7 @@ body, html {
         <span></span>
         <span></span>
         <span></span>
-        <input onclick='myFunction(modalGastos); closeModal();' class="modal-submit" type="submit" value="Continuar">
+        <input onclick='openModal(modalGastos); closeModal("modalGastos");' class="modal-submit" type="submit" value="Continuar">
       </a>
     </form>
   
