--- a/Web/index.html
+++ b/Web/index.html
@@ -116,7 +116,7 @@ body, html {
     
   <!-- Modal content -->
   <div class="modal-content">
-    <span onclick='ClosingModal("modalGastos")' class="close">&times;</span>
+    <span onclick='closeModal("modalGastos")' class="close">&times;</span>
     <div class="modal-form">
       <br>
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
