--- a/Web/index.html
+++ b/Web/index.html
@@ -90,11 +90,11 @@ body, html {
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
     <br>
-    <form action="">
+    <form onsubmit='openModal("modalGastos"); closeModal("myModal");'>
 
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
-        <label>Ingresos mensuales</label>
+        <label>Ingresos mensaules</label>
       </div>
 
       <a href="#">
@@ -102,7 +102,8 @@ body, html {
         <span></span>
         <span></span>
         <span></span>
-        <input onclick='closeModal("myModal"); openModal("modalGastos");' class="modal-submit" type="submit" value="Continuar">
+        <button type="submit" class="modal-submit">Continuar</button>
+
       </a>
     </form>
   
@@ -121,11 +122,11 @@ body, html {
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
     <br>
-    <form action="">
+    <form onsubmit='closeModal("modalGastos");'>
 
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
-        <label>Gastos báscios mensaules</label>
+        <label>Gastos básicos mensaules</label>
       </div>
 
       <a href="#">
@@ -133,7 +134,7 @@ body, html {
         <span></span>
         <span></span>
         <span></span>
-        <input onclick='openModal(modalGastos); closeModal("modalGastos");' class="modal-submit" type="submit" value="Continuar">
+        <button type="submit" class="modal-submit">Continuar</button>
       </a>
     </form>
   
