--- a/Web/index.html
+++ b/Web/index.html
@@ -90,7 +90,7 @@ body, html {
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
     <br>
-    <form onsubmit='openModal("modalGastos"); closeModal("myModal");'>
+    <form onsubmit='closeModal("myModal"); openModal("modalGastos");'>
 
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
@@ -124,6 +124,14 @@ body, html {
     <br>
     <form onsubmit='closeModal("modalGastos");'>
 
+      <div class="form-box">
+        <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
+        <label>Gastos básicos mensaules</label>
+      </div>
+      <div class="form-box">
+        <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
+        <label>Gastos básicos mensaules</label>
+      </div>
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
         <label>Gastos básicos mensaules</label>
