--- a/Web/index.html
+++ b/Web/index.html
@@ -90,7 +90,7 @@ body, html {
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
     <br>
-    <form onsubmit='closeModal("myModal"); openModal("modalGastos");'>
+    <form onsubmit='closeModal("myModal"); openModal("modalGastos")'>
 
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
@@ -130,11 +130,11 @@ body, html {
       </div>
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
-        <label>Gastos básicos mensaules</label>
+        <label>Ahorros mensaules</label>
       </div>
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
-        <label>Gastos básicos mensaules</label>
+        <label>Gastos personales mensaules</label>
       </div>
 
       <a href="#">
