--- a/Web - Copy (2)/index.html
+++ b/Web - Copy (2)/index.html
@@ -36,9 +36,10 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide">My Money</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
+      <a href="#form" class="w3-bar-item w3-button">FORM</a>
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
-      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
+      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i>OUR WORK</a>
       <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
@@ -90,7 +91,7 @@ body, html {
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
     <br>
-    <form onsubmit='openAndcloseModal("modalGastos","myModal");return false'>
+    <form onsubmit='openAndcloseModal("modalGastos","myModal")'>
 
       <div class="form-box">
         <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
@@ -122,50 +123,20 @@ body, html {
     <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
     <h5>(Sólo números)</h5>
     <br>
-    <form onsubmit='testing();return false'>
+    <form onsubmit='closeModal("modalGastos");'>
 
       <div class="form-box">
-        <input id="gastosBasicos" onkeypress="return isNumberKey(event)" type="text" required>
+        <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
         <label>Gastos básicos mensaules</label>
       </div>
       <div class="form-box">
-        <input id="ahorrosMensuales" onkeypress="return isNumberKey(event)" type="text" required>
+        <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
         <label>Ahorros mensaules</label>
       </div>
       <div class="form-box">
-        <input id="gastosPersonales" onkeypress="return isNumberKey(event)" type="text" required>
+        <input id="txtChar" onkeypress="return isNumberKey(event)" type="text" required>
         <label>Gastos personales mensaules</label>
       </div>
-
-      <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <button type="submit" class="modal-submit">Continuar</button>
-      </a>
-    </form>
-  
-  </div>
-  </div>
-</div>
-
-<!-- The Resultado Modal -->
-<div id="modalResutado" class="modal">
-    
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span onclick='closeModal("modalResutado")' class="close">&times;</span>
-    <div class="modal-form">
-      <br>
-    <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
-    <h5>(Sólo números)</h5>
-    <br>
-    <form onsubmit='closeModal("modalResutado");return false'>
-
-      <p>
-        Testing
-      </p>
 
       <a href="#">
         <span></span>
@@ -424,21 +395,19 @@ body, html {
 
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
-  <h3 class="w3-center">CONTACT</h3>
+  <h3 class="w3-center">REGLA 50/30/20</h3>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+
     <br>
     <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
+      <p><input onkeypress="return isNumberKey(event)" class="w3-input w3-border" type="text" placeholder="Ingresos mensuales" required name="Name"></p>
+      <p><input onkeypress="return isNumberKey(event)" class="w3-input w3-border" type="text" placeholder="Gastos básicos mensaules" required name="Email"></p>
+      <p><input onkeypress="return isNumberKey(event)" class="w3-input w3-border" type="text" placeholder="Gastos personales mensaules" required name="Subject"></p>
+      <p><input onkeypress="return isNumberKey(event)" class="w3-input w3-border" type="text" placeholder="Gastos personales mensaules" required name="Message"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+          <i class="fa fa-paper-plane"></i> EVALUAR FINANZAS
         </button>
       </p>
     </form>
