--- a/Web/index.html
+++ b/Web/index.html
@@ -163,7 +163,7 @@ body, html {
     <br>
     <form onsubmit='closeModal("modalResutado");return false'>
 
-      <p>
+      <p id="texto">
         Testing
       </p>
 
