--- a/Web - Copy (3)/index.html
+++ b/Web - Copy (3)/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="js/script.js"></script>
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
@@ -185,7 +184,7 @@ body, html {
 
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
-  <h3 class="w3-center">REGLA 50/30/20</h3>
+  <h3 class="w3-center">ABOUT THE COMPANY</h3>
   <p class="w3-center w3-large">Key features of our company</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-quarter">
@@ -346,23 +345,24 @@ body, html {
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>La regla 50/20/30</h3>
-      <p>El 50% para tus gastos más básicos, el 20% para ahorros y el 30% para tus gastos personales.</p>
-      <p>Esta conocida regla, se empieza a aplicar en distintos países, como Estados Unidos,<br>
-      siendo un hábito frecuente a la hora de distribuir los ingresos.</p>
+      <h3>Our Skills.</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
+      tempor incididunt ut labore et dolore.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
+      tempor incididunt ut labore et dolore.</p>
     </div>
     <div class="w3-col m6">
-      <p class="w3-wide"><i class="fas fa-car w3-margin-right"></i>Gastos básicos</p>
+      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
       <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:50%">50%</div>
+        <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
       </div>
-      <p class="w3-wide"><i class="fas fa-piggy-bank w3-margin-right"></i>Ahorros</p>
+      <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web Design</p>
       <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:20%">20%</div>
+        <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
       </div>
-      <p class="w3-wide"><i class="fa fa-plane w3-margin-right"></i>Gastos Personales</p>
+      <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
       <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:30%">30%</div>
+        <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
       </div>
     </div>
   </div>
