--- a/Web/index.html
+++ b/Web/index.html
@@ -58,9 +58,9 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
+    <span class="w3-jumbo w3-hide-small"><br>Control financiero</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
-    <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
+    <span class="w3-large">Tener control de lo que gastas y ahorras, te impulsa<br>a lograr tus objetivos financieros.</span>
     <p><button id="openModal" onclick='openModal("myModal")' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Evaluar tus finanzas</button></p>
   </div> 
 
@@ -179,7 +179,7 @@ body, html {
 
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
-  <h3 class="w3-center">La regla 50/30/20</h3>
+  <h3 class="w3-center">Regla 50/20/30</h3>
   <p class="w3-center w3-large">El 50/20/30 te permite saber cuánto dedicas a ahorro y a gastos, y a que tipología de gastos dedicas el 100% del dinero que ganas. Es muy sencillo:</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-third">
