--- a/Web/index.html
+++ b/Web/index.html
@@ -37,7 +37,7 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide">My Money</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-exclamation"></i> ABOUT</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -59,7 +59,6 @@ body, html {
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small"><br>Control financiero</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
     <span class="w3-large">Tener control de lo que gastas y ahorras, te impulsa<br>a lograr tus objetivos financieros.</span>
     <p><button id="openModal" onclick='openModal("myModal")' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Evaluar tus finanzas</button></p>
   </div> 
@@ -185,19 +184,28 @@ body, html {
     <div class="w3-third">
       <i class="fas fa-car w3-margin-bottom w3-jumbo w3-center"></i>
       <p class="w3-large">Gastos básicos 50%</p>
-      <p>El 50% del dinero de tu sueldo lo tienes que dedicar a gastos básicos. Estos se van en las facturas, la comida, etc. Son gastos que tienes que llevar a cabo sí o sí. Por eso abarcan el 50% de tu sueldo, para prevenir. Si te sobra dinero, mucho mejor. No lo gastes en cosas innecesarias y súmalo al siguiente porcentaje.</p>
+      <p>El 50% del dinero de tu sueldo lo tienes que dedicar a gastos básicos. Estos se van en las facturas, la comida, etc. Son gastos que tienes que llevar a cabo sí o sí.</p>
     </div>
     <div class="w3-third">
       <i class="fas fa-piggy-bank w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Ahorro 20%</p>
-      <p>Un 20% del dinero que ganas tiene que ir dedicado al ahorro. Este dinero va a suponer un colchón que te va a salvar contra posibles deudas futuras, reformas en tu casa o cambios en tu familia. Y, además, quizá eres joven y no pienses aún en ello, pero cuando seas mayor vas a agradecer el haber ahorrado un buen dinero a partir de este método.</p>
+      <p>Un 20% del dinero que ganas tiene que ir dedicado al ahorro. Este dinero va a suponer un colchón que te va a salvar contra posibles deudas futuras, reformas en tu casa o cambios en tu familia.</p>
     </div>
     <div class="w3-third">
       <i class="fa fa-plane w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Gastos personales 30%</p>
-      <p>El último 30% va destinado a gastos personales. Es decir, todo aquello que puedas hacer durante el mes. Quizá compres algo de ropa, otro mes puedes gastarlo en más actividades de ocio, en viajar o puede que se te junten unos cuantos cumpleaños. Ahí es donde tienes que gastar este 30%. Y te recuerdo, si te sobra, súmalo al 20% de ahorro.</p>
+      <p>El último 30% va destinado a gastos personales. Es decir, todo aquello que puedas hacer durante el mes.</p>
     </div>
   </div>
+
+<br> <br> <br>
+  <div class="w3-center">
+      <button class="w3-btn w3-black" type="submit" onclick='openModal("myModal")'>
+      <i class="fas fa-chart-bar"></i> EVALUAR FINANZAS
+    </button>
+    <br>
+    <p class="over"><u>¿Te gustaria saber algo más sobre finanzas?</u></p>
+    </div>
 </div>
 
 <!-- Modal for full size images on click-->
@@ -209,7 +217,7 @@ body, html {
   </div>
 </div>
 
-<!-- Skills Section -->
+<!-- Skills Section 
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
@@ -234,15 +242,13 @@ body, html {
     </div>
   </div>
 </div>
+-->
 
-<!-- Contact Section 
+<!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
     <br>
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
@@ -255,10 +261,9 @@ body, html {
         </button>
       </p>
     </form>
-    <!-- Image of location/map -->
   </div>
 </div>
--->
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
