--- a/Web/index.html
+++ b/Web/index.html
@@ -37,7 +37,7 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide">My Money</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-exclamation"></i> ABOUT</a>
+      <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-exclamation"></i> INFO</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -91,7 +91,7 @@ body, html {
         <label>Ingresos mensaules</label>
       </div>
 
-      <button class="w3-button w3-black" type="submit">
+      <button class="w3-btn w3-black" type="submit">
         <i class="fa fa-rocket"></i> Continuar
       </button>
    
@@ -127,7 +127,7 @@ body, html {
         <label>Gastos personales mensaules</label>
       </div>
 
-      <button class="w3-button w3-black" type="submit">
+      <button class="w3-btn w3-black" type="submit">
         <i class="fa fa-rocket"></i> Continuar
       </button>
     </form>
@@ -153,7 +153,7 @@ body, html {
         Testing
       </p>
 
-      <button class="w3-button w3-black" type="submit">
+      <button class="w3-btn w3-black" type="submit">
         <i class="fa fa-rocket"></i> Continuar
       </button>
     </form>
@@ -179,7 +179,7 @@ body, html {
         <label>Ingresos mensaules</label>
       </div>
 
-      <button class="w3-button w3-black" type="submit">
+      <button class="w3-btn w3-black" type="submit">
         <i class="fa fa-rocket"></i> Continuar
       </button>
    
