--- a/Web/index.html
+++ b/Web/index.html
@@ -37,6 +37,7 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide">My Money</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-lightbulb"></i> CONSEJOS</a>
       <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-exclamation"></i> INFO</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
