--- a/Web/index.html
+++ b/Web/index.html
@@ -51,7 +51,8 @@ body, html {
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-lightbulb"></i> CONSEJOS</a>
+  <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-exclamation"></i> INFO</a>
 </nav>
 
 <!-- Header with full-height image -->
