--- a/Web/index.html
+++ b/Web/index.html
@@ -151,9 +151,9 @@ body, html {
     <br>
     <form onsubmit='closeModal("modalResutado");return false'>
 
-      <p id="texto">
-        Testing
-      </p>
+      <p id="result_1"></p> 
+      <p id="result_2"></p>
+      <p id="result_3">Testing</p>
 
       <button class="w3-btn w3-black" type="submit">
         <i class="fa fa-rocket"></i> Continuar
