--- a/Web/index.html
+++ b/Web/index.html
@@ -146,8 +146,7 @@ body, html {
     <span onclick='closeModal("modalResutado")' class="close">&times;</span>
     <div class="modal-form">
       <br>
-    <h3>Ingresa los siguientes datos para evaluar tus finanzas</h3>
-    <h5>(Sólo números)</h5>
+    <h3>A continuación el resultado de la evaluación de tus finanzas, según la información ingresada:</h3>
     <br>
     <form onsubmit='closeModal("modalResutado");return false'>
 
