--- a/Web/index.html
+++ b/Web/index.html
@@ -155,7 +155,7 @@ body, html {
       <p id="result_3">Testing</p>
 
       <button class="w3-btn w3-black" type="submit">
-        <i class="fa fa-rocket"></i> Continuar
+        <i class="fa fa-rocket"></i> Cerrar
       </button>
     </form>
   
