--- a/Web/index.html
+++ b/Web/index.html
@@ -152,7 +152,9 @@ body, html {
 
       <p id="result_1"></p> 
       <p id="result_2"></p>
-      <p id="result_3">Testing</p>
+      <p id="result_3"></p> <br>
+      <p id="result_4"></p>
+      <p id="result_points"></p>
 
       <button class="w3-btn w3-black" type="submit">
         <i class="fa fa-rocket"></i> Cerrar
