--- a/Web/index.html
+++ b/Web/index.html
@@ -90,7 +90,7 @@ body, html {
 
       <div class="form-box">
         <input id="ingresosMensuales" type="number" min="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57" required>
-        <label>Ingresos mensaules</label>
+        <label>Ingresos mensuales</label>
       </div>
 
       <button class="w3-btn w3-black" type="submit">
@@ -118,15 +118,15 @@ body, html {
 
       <div class="form-box">
         <input id="gastosBasicos" type="number" required min="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57"> 
-        <label>Gastos básicos mensaules</label>
+        <label>Gastos básicos mensuales</label>
       </div>
       <div class="form-box">
         <input id="ahorrosMensuales" type="number" required min="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
-        <label>Ahorros mensaules</label>
+        <label>Ahorros mensuales</label>
       </div>
       <div class="form-box">
         <input id="gastosPersonales" type="number" required min="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
-        <label>Gastos personales mensaules</label>
+        <label>Gastos personales mensuales</label>
       </div>
 
       <button class="w3-btn w3-black" type="submit">
@@ -178,7 +178,7 @@ body, html {
 
       <div class="form-box">
         <input id="ingresosMensuales" minlength="5" required>
-        <label>Ingresos mensaules</label>
+        <label>Ingresos mensuales</label>
       </div>
 
       <button class="w3-btn w3-black" type="submit">
